2003-11-20  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/abstract.py: Added an assert to
	FileDescriptor.resumeProducing to prevent it from being
	called when the transport is no longer connected.

2003-11-20  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/tasks.py: LoopingCall added.

2003-10-14  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/tasks.py: Deprecated scheduling API removed.

2003-11-18  Jonathan Simms  <jonathan@embassynetworks.com>

	* twisted/protocols/ftp.py: refactored to add cred support, 
	pipelining, security.
	* twisted/test/test_ftp.py: tests for the new ftp

2003-11-18  Sam Jordan  <sam@twistedmatrix.com>

	* twisted/protocols/msn.py: support for MSNP8
	* doc/examples/msn_example.py: small msn example

2003-11-13  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/ssh/agent.py: support for the OpenSSH agent protocol
	* twisted/conch/ssh/connection.py: fix broken channel retrieval code
	* twisted/conch/ssh/userauth.py: refactoring to allow use of the agent
	* twisted/conch/ssj/transport.py: fix intermittent test failure
	* twisted/internet/protocol.py: add UNIX socket support to
	ClientCreator
	* twisted/scripts/conch.py: use the key agent if available, also
	agent forwarding

2003-11-07  Brian Warner  <warner@lothar.com>

	* twisted/application/app.py (getApplication): provide a more
	constructive error message when a .tac file doesn't define
	'application'. Closes issue387.

2003-11-01  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/ssh/common.py: use GMPy for faster math if it's
	available

2003-10-24  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.0 final. Same codebase as rc2.

2003-10-24  Brian Warner  <warner@lothar.com>

	* doc/howto/test-standard.xhtml: Add section on how to clean up.

	* twisted/test/test_conch.py: improve post-test cleanup. Addresses
	problems seen in issue343.
